# lib/api-spec/openapi.yaml
@@ -600,6 +600,11 @@ components:
           type: array
           items: { type: string }
           nullable: true
+        deliveryAvailable: { type: boolean }
+        pickupAvailable: { type: boolean }
+        acceptedPaymentMethods:
+          type: array
+          items: { type: string }
         createdAt: { type: string, format: date-time }
 
     VendorDetail:
@@ -651,6 +656,11 @@ components:
         deliveryLocations:
           type: array
           items: { type: string }
+        deliveryAvailable: { type: boolean }
+        pickupAvailable: { type: boolean }
+        acceptedPaymentMethods:
+          type: array
+          items: { type: string }
 
     UpdateVendorBody:
       type: object
@@ -670,6 +680,11 @@ components:
         welcomeMessage: { type: string }
         requiresDeliveryAddress: { type: boolean }
         deliveryLocations:
+          type: array
+          items: { type: string }
+        deliveryAvailable: { type: boolean }
+        pickupAvailable: { type: boolean }
+        acceptedPaymentMethods:
           type: array
           items: { type: string }
 
